<resources>
    <string name="app_name">Premier League Information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loadData">Load Data</string>
    <string name="menu_team">Team List</string>
    <string name="select">Please Select Your Favourite Team</string>
    <string name="Full_Name">Alternative Name:</string>
    <string name="league">League:</string>
    <string name="website">Website:</string>
    <string name="Stadium">Stadium:</string>
    <string name="Description">Club Description: </string>
    <string name="last_five_fixtures">Last Five Fixtures</string>
    <string name="next_five_fixtures">Next Five Fixtures</string>
    <string name="match_name">Fixture Played</string>
    <string name="Change_Club">Change Club</string>
    <string name="action_delete">Change Team</string>
    <string name="vs">-</string>
</resources>
