<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/dialog_submit"
    android:layout_height="wrap_content">


    <TextView
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/match_played"
        android:text="@string/match_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

    <TextView
        android:layout_gravity="center"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/home_goals"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".8">
    </TextView>

        <TextView
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/vs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </TextView>

    <TextView
        android:layout_gravity="center"
        android:textAlignment="center"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/away_goals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:layout_weight=".8"
        android:gravity="center">
    </TextView>
    </LinearLayout>
</LinearLayout>