<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width = "200dp"
            android:layout_height= "200dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/recycler_image_child"
            android:src="@drawable/ic_launcher_background">
        </androidx.appcompat.widget.AppCompatImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_image_text_child"
        android:text="@string/menu_team"
        android:textStyle="bold"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_horizontal">
    </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/Full_Name" />

            <TextView
                android:layout_weight="1"
                android:layout_gravity="center|left"
                android:textColor="@color/colorPrimary"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:id="@+id/alternate"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/league" />

            <TextView
                android:layout_weight="1"
                android:layout_gravity="center|left"
                android:textColor="@color/colorPrimary"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:id="@+id/League"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/Stadium" />

            <TextView
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:id="@+id/Stadium"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/website" />

            <TextView
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:id="@+id/website"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/activity_horizontal_margin">
            <Button
                android:textColor="@color/colorPrimary"
                android:background="@drawable/custom_button"
                android:id="@+id/last_five"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/last_five_fixtures"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_weight="1"/>

            <Button
                android:background="@drawable/custom_button"
                android:id="@+id/next_five"
                android:textColor="@color/colorPrimary"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/next_five_fixtures"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_weight="1" />

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fixture_recycler">
        </androidx.recyclerview.widget.RecyclerView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description" />

            <TextView
                android:textColor="@color/colorPrimary"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_gravity="center"
                android:id="@+id/Description"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>